# cxx-exercise

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: spec.bs
tests/: CMakeLists.txt  conversion_tests.cc  ctor_tests.cc  io.hh  json_features.in.hh  parse_tests.cc  traits.hh
